tests/sksl/errors/ArrayTooManyDimensions.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
float x[2][2];
^^^^^^^^^^^^^
1 error
